--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "pnotify": "^4.0.0",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.2.2",
+    "vue-froala-wysiwyg": "^3.0.6",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/runtime-corejs2": "^7.7.6",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-runtime": "^6.26.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
