--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.10",
     "vue-clickaway": "^2.2.2",
     "vue-froala-wysiwyg": "^3.0.6",
+    "vue-select": "^3.4.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
