--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-clickaway": "^2.2.2",
     "vue-froala-wysiwyg": "^3.0.6",
     "vue-select": "^3.4.0",
+    "vue2-dropzone": "^3.6.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
